--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
-    "framer-motion": "^11.3.28",
+    "axios": "^1.7.4",
+    "framer-motion": "^12.0.0-alpha.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
