--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,11 @@
     "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.3.1",
+    "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
+    "login": "^0.8.0",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
