--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.4",
+    "firebase": "^10.13.0",
     "framer-motion": "^12.0.0-alpha.0",
+    "init": "^0.1.2",
+    "login": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
