--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.4",
     "framer-motion": "^12.0.0-alpha.0",
@@ -17,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-social-icons": "^6.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
