--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "framer-motion": "^12.0.0-alpha.0",
+    "gsap": "^3.12.5",
     "init": "^0.1.2",
     "login": "^0.8.0",
     "react": "^18.3.1",
