--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.4",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.13.0",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
